// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunCommand in a basic repo always runs env script 1`] = `
Array [
  "packages/package-1 env",
  "packages/package-4 env",
  "packages/package-2 env",
  "packages/package-3 env",
]
`;

exports[`RunCommand in a basic repo does not run a script in ignored packages 1`] = `
Array [
  "packages/package-1 my-script",
]
`;

exports[`RunCommand in a basic repo runs a script in all packages with --parallel 1`] = `
Array [
  "packages/package-1 env",
  "packages/package-2 env",
  "packages/package-3 env",
  "packages/package-4 env",
]
`;

exports[`RunCommand in a basic repo runs a script in packages 1`] = `
Array [
  "packages/package-1 my-script",
  "packages/package-3 my-script",
]
`;

exports[`RunCommand in a basic repo runs a script in packages with --stream 1`] = `
Array [
  "packages/package-1 my-script",
  "packages/package-3 my-script",
]
`;

exports[`RunCommand in a basic repo runs a script only in scoped packages 1`] = `
Array [
  "packages/package-1 my-script",
]
`;

exports[`RunCommand in a basic repo should filter packages that are not updated with --since 1`] = `
Array [
  "packages/package-3 my-script",
]
`;

exports[`RunCommand with --include-filtered-dependencies runs scoped command including filtered deps 1`] = `
Array [
  "packages/package-1 my-script",
  "packages/package-2 my-script",
]
`;
